--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "typescript": "^5.9.2",
     "vite": "^7.1.7",
     "vite-tsconfig-paths": "^5.1.4",
+    "zod": "^4.1.13",
     "zustand": "^5.0.9"
   }
 }
