--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react-dom": "^19.1.9",
     "clsx": "^2.1.1",
     "pdfjs-dist": "^5.4.449",
+    "react-dropzone": "^14.3.8",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.13",
     "tw-animate-css": "^1.4.0",
