--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "react-router build",
     "dev": "react-router dev",
     "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc"
+    "typecheck": "react-router typegen && tsc",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@react-router/node": "^7.9.2",
@@ -17,21 +18,34 @@
     "react-router": "^7.9.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
     "@react-router/dev": "^7.9.2",
     "@tailwindcss/vite": "^4.1.13",
     "@types/node": "^22",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "clsx": "^2.1.1",
-    "pdfjs-dist": "^5.4.449",
+    "dompurify": "^3.3.0",
+    "eslint": "^9.39.1",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.5.0",
+    "husky": "^8.0.0",
+    "lint-staged": "^16.2.7",
+    "pdfjs-dist": "5.3.93",
+    "prettier": "^3.7.4",
     "react-dropzone": "^14.3.8",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.13",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.2",
+    "typescript-eslint": "^8.48.1",
     "vite": "^7.1.7",
     "vite-tsconfig-paths": "^5.1.4",
     "zod": "^4.1.13",
     "zustand": "^5.0.9"
+  },
+  "lint-staged": {
+    "**/*.{ts,sass,scss, tsx}": "prettier --write",
+    "**/*.{ts,js, tsx, jsx}": "eslint"
   }
 }
