--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -28,27 +28,24 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v5
-      - name: Setup PNPM
-        uses: pnpm/action-setup@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
-          version: 10.0.x
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: "24"
+          node-version: '18'
+          cache: 'pnpm'
+
       - name: Install dependencies
         run: pnpm install
-      - name: Build
+
+      - name: Build static content
         run: pnpm run build
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v4
-        with:
-          # Upload dist folder
-          path: './dist'
+
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v4
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
