--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -52,7 +52,7 @@ jobs:
         uses: actions/upload-pages-artifact@v4
         with:
           # Vite outputs to "dist" by default
-          path: ./dist
+          path: ./build
 
       - name: Deploy to GitHub Pages
         id: deployment
