--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "ai-resume-analyser",
+  "homepage": "https://george-shenoda.github.io/ai-resume-analyzer/",
   "private": true,
   "type": "module",
   "scripts": {
@@ -8,7 +9,9 @@
     "start": "react-router-serve ./build/server/index.js",
     "preview": "vite preview",
     "typecheck": "react-router typegen && tsc",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@react-router/node": "^7.9.2",
@@ -29,6 +32,7 @@
     "dompurify": "^3.3.0",
     "eslint": "^9.39.1",
     "eslint-plugin-react": "^7.37.5",
+    "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
     "husky": "^8.0.0",
     "lint-staged": "^16.2.7",
