--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "react-router build",
     "dev": "react-router dev",
-    "start": "react-router-serve ./build/server/index.js",
+    "start": "serve -s build/client",
     "preview": "vite preview",
     "typecheck": "react-router typegen && tsc",
     "predeploy": "npm run build",
@@ -19,6 +19,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router": "^7.9.2",
+    "serve": "^14.2.5",
     "zod": "^4.1.13",
     "zustand": "^5.0.9"
   },
